test/rationalBitwiseOr.slq

def main(){
	x:=1/2;
	return x|x; // error
}
